--- a/localisation/english/MD_focus_LBA_l_english.yml
+++ b/localisation/english/MD_focus_LBA_l_english.yml
@@ -2111,7 +2111,7 @@
  LibyaFamily.47.a: "The charges will obviously be dropped"
  LibyaFamily.47.b: "Put some diplomatic pressure on the Germans!"
  LibyaFamily.48.t: "Saif al-Arab's Ferrari Impounded"
- LibyaFamily.48.d: "The German police has impounded Saif al-Arab's Ferrari after neighbours copmlained about the loud noice its exhaust was making. Saif al-Arab is now facing charges under breach of peace."
+ LibyaFamily.48.d: "The German police has impounded Saif al-Arab's Ferrari after neighbours complained about the loud noise its exhaust was making. Saif al-Arab is now facing charges under breach of peace."
  LibyaFamily.48.a: "The charges will obviously be dropped"
  LibyaFamily.48.b: "Send him legal help!"
  LibyaFamily.49.t: "Saif al-Arab Dies In Prison"
@@ -2156,7 +2156,7 @@
  LibyaFamily.61.t: "The Car Is A Disaster"
  LibyaFamily.61.d: "After Muammar Gaddafi shared his ideas with Libyan engineers and consultants from European car manufacturers, the listeners were very skeptical of his idea. However, the production of the car went forward anyway. Shortly after at a car show in Libya, the Saroukh el-Jamahiriya (Libyan Rocket) was unveiled. Dubbed by Gaddafi as the safest car in the world, the show continued with a live presentation of the car's unique wedge shape which would simply deflect anything the car collides with. As the car sped of on the test track, it ricocheted off the impact straight into the watching audience. As the car hit the safety barrier, it exploded in a ball of fire. Several people died due to the collision, and dozens were injured. Immediately after, there was a sudden drop in all new car sales the following week. People are refusing to buy new cars as they fear for their safety. If the safest new car is this unsafe, how bad are the others? People are even importing older cars from Cental Africa to get their hands on something old and reliable. This increase in old cars on the roads has actually worsened Libya's traffic accidents and fatalities."
  LibyaFamily.61.a: "Why would you make the car pointy!?"
- LibyaFamily.62.t: "A Successfull State Visit"
+ LibyaFamily.62.t: "A Successful State Visit"
  LibyaFamily.62.d: "When Muammar Gaddafi landed in [?libya_state_visit_target.GetNameDef], he brought along with with him his massive Bedouin tent, which he setup in a park in the country's capital. With him were his bodyguard, an entourage of ministers, luxury cars and a small herd of camels so he could drink their milk every morning. While originally, it was planned for Gaddafi to meet [?libya_state_visit_target.GetName]'s leader in a more official setting, eventually [?ibya_state_visit_target.GetLeader] caved in to Gaddafi's demands to have the meeting in his tent. While various business and Libya's future was discussed, nothing fruitful was achieved. However, this humiliation of a foreign head of state has increased Gaddafi's standing in the world and at home."
  LibyaFamily.62.a: "Finally Gaddafi gets the respect he deserves"
  LibyaFamily.63.t: "A Mediocre State Visit"
