--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -1491,6 +1491,8 @@
  GER_the_clock_ticks_desc: "Today is the day we begin our operation. With our allies, we will liberate the region from the false state!"
  GER_bundeswehr_reforms_decisions: "Bundeswehr Reform"
  GER_bundeswehr_reforms_decisions_desc: "The §HBundeswehr§!, our nations armed forces is in a dire §Rneed of repair§!. In it's current state, it is quite §Rweak and ineffective§!. But by initiating a series of reforms and changes, we can fix that.\n\n§HBundeswehr Recovery§! will represent the progress we have made in §Hreforming§! the force. Once it reaches §H100%§!, any problems that remain will be §Gresolved§!, and the force can become combat ready."
+ GER_Weizsacker_decision: "Bundeswehr Reform"
+ GER_Weizsacker_decision_desc: "The §HBundeswehr§!, our nations armed forces is in a dire §Rneed of repair§!. In it's current state, it is quite §Rweak and ineffective§!. But by initiating a series of reforms and changes, we can fix that.\n\n§HBundeswehr Recovery§! will represent the progress we have made in §Hreforming§! the force. Once it reaches §H100%§!, any problems that remain will be §Gresolved§!, and the force can become combat ready."
  GER_allocate_larger_budget: "Allocate a Larger Budget"
  GER_allocate_larger_budget_desc: "We can increase our funding for our troops, speeding up the process of our reforms by improving basic commodities in our military."
  GER_upgrade_military_infrastructure: "Enhance Military Infrastructure"
@@ -2972,6 +2974,9 @@
  GER_bundeswehr_recovery_progbar_tt: "§YBundeswehr Recovery Progress§!: §G[?bundeswehr_recovery_status]§!"
  GER_add_5_bundes_reform: "Will increase §HBundeswehr Reform§! by §H5%§!"
  GER_add_10_bundes_reform: "Will increase §HBundeswehr Reform§! by §H10%§!"
+ GER.Neues_Heer_status_progbar_tt: "§YStructure Neues Heer Progress§!: §G[?Neues_Heer_status]§!"
+ GER_add_5_heer_reform: "Will increase §HStructure Neues Heer Reform§! by §H5%§!"
+ GER_add_10_heer_reform: "Will increase §HStructure Neues Heer Reform§! by §H10%§!"
  GER_idea_east_german_debuff1: "East German Anger"
  GER_idea_east_german_debuff1_desc: "East Germans are quite pissed about their living conditions, and now they are acting against our interests..\n§W--------------§!\nThis National Spirit can be §RRemoved§! if we §GImprove§! East German opinion, or raise their standard of living."
  GER_unlock_Network_Infrastructure_decision_TT: "£decision_icon_small Will unlock '§HThe Digital Era§!' decisions"
