--- a/localisation/polish/MD_focus_IND_l_polish.yml
+++ b/localisation/polish/MD_focus_IND_l_polish.yml
@@ -321,7 +321,7 @@
  IND_und_help_unemployment_desc: "Zatrudnianie dużych grup ludności ma kluczowe znaczenie dla wzrostu gospodarczego Indonezji, dlatego powinniśmy budować nowe budynki, aby zapewnić tym ludziom pracę"
  IND_und_united_indonesia: "Zjednoczona Indonezja"
  IND_und_united_indonesia_desc: "Zjednoczeni przez naszą wiarę i nasz naród, możemy wreszcie odpocząć, widząc, jak nasza polityka jest wdrażana w tym kraju"
- IND_party_of_struggle: "The Party Of Struggle"
+ IND_party_of_struggle: "Partia Walki"
  IND_party_of_struggle_desc: "Partia Demokratyczna jest jedną z najpopularniejszych partii prozachodnich w Indonezji i opowiada się za bardziej liberalnym państwem"
  IND_strug_brace_for_change: "Przygotuj się na zmiany"
  IND_strug_brace_for_change_desc: "Mamy nadzieję, że nasi ludzie są gotowi na gruntowne reformy, które będzie musiała zaproponować nasza partia"
@@ -351,7 +351,7 @@
  IND_strug_host_regional_events_desc: "Indonezja była w przeszłości centrum wydarzeń regionalnych i sprowadziła do stanu wiele nowych twarzy. Powinniśmy kontynuować tę praktykę i oferować organizację większej liczby wydarzeń"
  IND_strug_just_indonesia: "Sprawiedliwa Indonezja"
  IND_strug_just_indonesia_desc: "Dzięki całej naszej ciężkiej pracy możemy w końcu nazwać ją taką, jaka jest, nową i Sprawiedliwą Indonezją"
- IND_democrat_party: "The Democrat Party"
+ IND_democrat_party: "Partia Demokratyczna"
  IND_democrat_party_desc: "Partia lewicowa, Partia Walki, naciska na wiele drastycznych zmian, ale czy uda jej się je wprowadzić, nikt nie wie"
  IND_dem_greater_future: "Większe jutro"
  IND_dem_greater_future_desc: "Musimy przygotować naród na reformy i zmiany, bo jutro musi być lepsze niż dzisiaj, a Indonezja będzie prosperować!"
