--- a/localisation/polish/MD_focus_UKR_l_polish.yml
+++ b/localisation/polish/MD_focus_UKR_l_polish.yml
@@ -627,7 +627,7 @@
  UKR_party_regions_unifed_window_desc: "Wprowadzimy nowe zasady dla inwestorów w naszym kraju, które ułatwią im interakcję z naszymi władzami"
  UKR_party_regions_decrease_agro: "Zmniejszenie przepisów dotyczących rolnictwa"
  UKR_party_regions_decrease_agro_desc: "Przemysł rolniczy odniesie nowe korzyści, dzięki czemu mamy nadzieję zwiększyć jego produktywność."
- UKR_party_regions_laizes: "Laisez Faire"
+ UKR_party_regions_laizes: "Targi Laizess"
  UKR_party_regions_laizes_desc: "Częściowo przyjmiemy jedną z libertariańskich zasad w naszej polityce gospodarczej i nie będziemy ingerować w procesy gospodarcze"
  UKR_party_regions_taxx: "Zmień kodeks podatkowy"
  UKR_party_regions_taxx_desc: "Wprowadzimy zmiany w ordynacji podatkowej, które uznamy za konieczne. Nasze koncesje obniżą podatki lokalne aż trzykrotnie!"
@@ -699,7 +699,7 @@
  UKR_parti_regions_anti_corruption_commitie_desc: "Nowa komisja ma na celu walkę ze skorumpowanymi urzędnikami wszystkich szczebli"
  UKR_parti_regions_invest_open_window: "Ujednolicone inwestycje w okna"
  UKR_parti_regions_taxx: "Zreformowany kodeks podatkowy"
- UKR_parti_regions_laizes: "Laisez Faire"
+ UKR_parti_regions_laizes: "Targi Laizess"
  UKR_parti_regions_stability_reform: "Stabilność i reforma"
  UKR_parti_regions_lustration: "Lustracje"
  UKR_parti_regions_opposition_agree: "Współpraca z opozycją"
@@ -2237,7 +2237,7 @@
  PRP_neutrality_DEF: "Republika Podola"
  PRP_fascism_ADJ: "Republika Dniepropietrowska"
  PRP_democratic_ADJ: "Republika Podola"
- PRP_communism_ADJ: "Podolia Republic"
+ PRP_communism_ADJ: "Republika Podola"
  PRP_neutrality_ADJ: "Republika Podola"
  PRP_nationalist: "Republika Podola"
  PRP_nationalist_DEF: "Republika Podola"
