--- a/localisation/polish/MD_ideas_l_polish.yml
+++ b/localisation/polish/MD_ideas_l_polish.yml
@@ -401,7 +401,7 @@
  anti_PHI_hack: "Ukradł tajne informacje z Filipin"
  anti_SIN_hack: "Ukradł tajne informacje z Singapuru"
  anti_CHI_hack: "Ukradł tajne informacje z Chin"
- anti_CZE_hack: "Ukradł tajne informacje z Czech"
+ anti_CZE_hack: "Wykradziono tajne informacje z Czech"
  anti_EST_hack: "Ukradł tajne informacje z Estonii"
  anti_LAT_hack: "Ukradł tajne informacje z Łotwy"
  anti_LIT_hack: "Ukradł tajne informacje z Litwy"
