--- a/localisation/polish/MD_laws_l_polish.yml
+++ b/localisation/polish/MD_laws_l_polish.yml
@@ -96,19 +96,19 @@
  education_budget: "Budżet Edukacji"
  edu_01: "Podstawowe wsparcie dla edukacji podstawowej"
  edu_01_desc: "Nasz system edukacji podstawowej od dawna cierpi na chroniczne niedofinansowanie. Wpływa to negatywnie nie tylko na jakość edukacji, ale także na możliwości rozwojowe młodszego pokolenia.\n[edu_spending_protest_TT]"
- edu_01_TT: "\n$$[education_01_rate] §Hbillion§! jest wydawane na edukację.\n£education_budget_cost_factor_texticon  Nasze §1wydatki na edukację§! zwiększają się o §Y[?research_slot_modifier|.0%]§_5 ze względu na liczbę §1miejsc na badania§!\n"
+ edu_01_TT: "\n$$[education_01_rate] §Hbillion§! jest wydawane na edukację.\n£education_budget_cost_factor_texticon  Nasze §1wydatki na edukację§! zwiększają się o §Y[?research_slot_modifier|.0%]§! ze względu na liczbę §1miejsc na badania§!\n"
  edu_02: "Podstawowe wsparcie dla edukacji podstawowej i średniej"
  edu_02_desc: "Długoterminowe inwestycje w edukację naszych obywateli na poziomie podstawowym i średnim otworzą nieograniczone możliwości jutra. Aby zapewnić wszystkim dzieciom godny start w życiu, musimy zagwarantować im minimalny poziom finansowania szkołom w całym kraju.\n[edu_spending_protest_TT]"
- edu_02_TT: "\n$$[education_02_rate] §Hbillion§! jest wydawane na edukację.\n£education_budget_cost_factor_texticon  Nasze §1wydatki na edukację§! zwiększają się o §Y[?research_slot_modifier|.0%]§_5 ze względu na liczbę §1miejsc na badania§!\n"
+ edu_02_TT: "\n$$[education_02_rate] §Hbillion§! jest wydawane na edukację.\n£education_budget_cost_factor_texticon  Nasze §1wydatki na edukację§! zwiększają się o §Y[?research_slot_modifier|.0%]§! ze względu na liczbę §1miejsc na badania§!\n"
  edu_03: "Bezpłatna edukacja podstawowa i średnia"
  edu_03_desc: "Edukacja jest podstawowym prawem człowieka i kluczem do lepszej przyszłości. Aby zapewnić równe szanse wszystkim dzieciom w naszym kraju, gwarantujemy bezpłatny dostęp do wysokiej jakości edukacji na poziomie podstawowym i średnim.\n[edu_spending_protest_TT]"
- edu_03_TT: "\n$$[education_03_rate] §Hbillion§! jest wydawane na edukację.\n£education_budget_cost_factor_texticon  Nasze §1wydatki na edukację§! zwiększają się o §Y[?research_slot_modifier|.0%]§_5 ze względu na liczbę §1miejsc na badania§!\n"
+ edu_03_TT: "\n$$[education_03_rate] §Hbillion§! jest wydawane na edukację.\n£education_budget_cost_factor_texticon  Nasze §1wydatki na edukację§! zwiększają się o §Y[?research_slot_modifier|.0%]§! ze względu na liczbę §1miejsc na badania§!\n"
  edu_04: "Fokus na szkolnictwo wyższe"
  edu_04_desc: "W dobie globalizacji i technologii cyfrowych szkolnictwo wyższe odgrywa coraz większą rolę w rozwoju gospodarki. Aby zapewnić naszej młodzieży równe szanse na zdobycie cennych umiejętności i kwalifikacji zawodowych, zwiększymy finansowanie szkół wyższych i uniwersytetów.\n[edu_spending_protest_TT]"
- edu_04_TT: "\n$$[education_04_rate] §Hbillion§! jest wydawane na edukację.\n£education_budget_cost_factor_texticon  Nasze §1wydatki na edukację§! zwiększają się o §Y[?research_slot_modifier|.0%]§_5 ze względu na liczbę §1miejsc na badania§!\n"
+ edu_04_TT: "\n$$[education_04_rate] §Hbillion§! jest wydawane na edukację.\n£education_budget_cost_factor_texticon  Nasze §1wydatki na edukację§! zwiększają się o §Y[?research_slot_modifier|.0%]§! ze względu na liczbę §1miejsc na badania§!\n"
  edu_05: "Bezpłatna, powszechna edukacja wysokiej jakości"
  edu_05_desc: "Wszystkie dzieci powinny mieć dostęp do dobrej, bezpłatnej edukacji, niezależnie od sytuacji finansowej ich rodzin. Aby zapewnić wszystkim obywatelom równe warunki startu, wprowadzamy edukację kosztem budżetu państwa. Pozwoli to rozwinąć potencjał każdego dziecka i stworzyć społeczeństwo równych szans.\n[edu_spending_protest_TT]"
- edu_05_TT: "\n$$[education_05_rate] §Hbillion§! jest wydawane na edukację.\n£education_budget_cost_factor_texticon  Nasze §1wydatki na edukację§! zwiększają się o §Y[?research_slot_modifier|.0%]§_5 ze względu na liczbę §1miejsc na badania§!\n"
+ edu_05_TT: "\n$$[education_05_rate] §Hbillion§! jest wydawane na edukację.\n£education_budget_cost_factor_texticon  Nasze §1wydatki na edukację§! zwiększają się o §Y[?research_slot_modifier|.0%]§! ze względu na liczbę §1miejsc na badania§!\n"
  health_budget: "Budżet zdrowia"
  health_01: "Minimalne dotacje dla lokalnych klinik"
  health_01_desc: "Rząd zapewnia ograniczoną ilość wsparcia finansowego małym, lokalnym klinikom. Kliniki te oferują podstawową opiekę, ale zasoby i specjalistyczne metody leczenia są ograniczone.\n[health_spending_protest_TT]"
