--- a/localisation/polish/MD_money_l_polish.yml
+++ b/localisation/polish/MD_money_l_polish.yml
@@ -46,7 +46,7 @@
  EXPENSES: "Wydatki"
  INCOMES: "Dochód"
  PROJECTS: "Projektowanie"
- LEASING: "Leasing"
+ LEASING: "Użyczanie"
  EMPLOYMENT: "Zatrudnienie"
  PERSONAL_INCOME_TAXES: "§CDochód ludności:§!"
  PERSONAL_INCOME_RATE: "$$§G[?population_tax|+3]§!"
@@ -128,8 +128,8 @@
  MIGRATION_LAWS: "§7Kontrola migracji§!:"
  MIGRATION_LAWS_RATE: "$$[?border_control_gain|-3]"
  MIGRATION_LAWS_TOOLTIP: "Kontrola migracji"
- MIGRATION_LAWS_TOOLTIP_DELAYED: "Migration Control represents the expenses incurred from our country's §YMigration Law§! and our current set immigration policy. The base cost of §7Migration Control§! is based on the total population of the country with every level of §YMigration Laws§! increasing the cost.\n\nGDP/C impact on §YMigration Law§!: [?education_cost_gdp_multiplier_display|-%0]\nLaw, Idea and Tech impact on §YMigration Law§!: [?border_cost_multiplier_display|-%0]"
- migration_rate_impact_effect: "Net §YMigration Rate§!"
+ MIGRATION_LAWS_TOOLTIP_DELAYED: "Kontrola Migracyjna reprezentuje poniesione wydatki z §YPrawa Migracyjnego§! naszego kraju oraz naszej obecnie ustanowionej polityki imigracyjnej. Standardowy koszt §7Kontroli Migracyjnej§! jest ustanowiony przez całkowitą populację kraju wraz z każdym poziomem §YPrawa Migracyjnego§! zwiększającego koszt.\n\nWpływ PKB/C na §YPrawo Migracyjne§!: [?education_cost_gdp_multiplier_display|-%0]\nWpływ prawa, Idei i Technologii na §YPrawo Migracyjne§!: [?border_cost_multiplier_display|-%0]"
+ migration_rate_impact_effect: "§YWskaźnik Migracji§! Netto"
  MAXIMUM_MIGRATION_RATE: "§LMaksymalna szybkość migracji:§!"
  MAXIMUM_MIGRATION_RATE_VALUE: "[?ROOT.max_net_immigration_rate|%Y]"
  MAXIMUM_MIGRATION_RATE_TT: "Maksymalna stawka migracji"
