--- a/localisation/polish/equipment_l_polish.yml
+++ b/localisation/polish/equipment_l_polish.yml
@@ -5729,16 +5729,16 @@
  cv_awacs_equipment_1_desc: ""
  cv_awacs_equipment_2: "CV AWACS 2025"
  cv_awacs_equipment_2_desc: ""
- kamikaze_drone: "Kamikaze drone"
- Kamikaze_drone_equipment: "Kamikaze drone"
+ kamikaze_drone: "Dron Kamikaze"
+ Kamikaze_drone_equipment: "Dron Kamikaze"
  Kamikaze_drone_equipment_desc: "Amunicja krążąca (znana również jako dron samobójczy lub dron kamikadze) to kategoria systemów broni powietrznej, w której amunicja kręci się (biernie czeka) wokół docelowego obszaru przez pewien czas i atakuje dopiero po zlokalizowaniu celu. Amunicja krążąca umożliwia szybszy czas reakcji przeciwko ukrytym lub ukrytym celom, które wyłaniają się na krótkie okresy bez umieszczania platform o dużej wartości w pobliżu obszaru docelowego, a także umożliwiają bardziej selektywne namierzanie, ponieważ atak można łatwo przerwać."
- kamikaze_drone_1: "Kamikaze drone 2005"
+ kamikaze_drone_1: "Dron Kamikaze 2005"
  kamikaze_drone_1_desc: ""
- kamikaze_drone_2: "Kamikaze drone 2015"
+ kamikaze_drone_2: "Dron Kamikaze 2015"
  kamikaze_drone_2_desc: ""
- kamikaze_drone_3: "Kamikaze drone 2025"
+ kamikaze_drone_3: "Dron Kamikaze 2025"
  kamikaze_drone_3_desc: ""
- kamikaze_drone_4: "Kamikaze drone 2035"
+ kamikaze_drone_4: "Dron Kamikaze 2035"
  kamikaze_drone_4_desc: ""
  transport_helicopter_equipment: "Helikoptery transportowe"
  transport_helicopter_equipment_desc: "Śmigłowce transportowe służą do transportu wojsk na pole bitwy lub w jego pobliżu."
