--- a/localisation/polish/loading_tips_l_polish.yml
+++ b/localisation/polish/loading_tips_l_polish.yml
@@ -248,5 +248,5 @@
  LOADING_TIP_261: "Nikt nigdy nie wróci do roku 2007\n – Dmitrij Miedwiediew"
  LOADING_TIP_262: "Jeśli walka jest nieunikniona, idź i walcz pierwszy.\n – Władimir Putin"
  LOADING_TIP_263: "Towarzysze! Musimy zdecydowanie i raz na zawsze zlikwidować kult jednostki.\n – Nikita Chruszczow"
- LOADING_TIP_264: "Jeśli będziemy kierować rządem za pomocą takich owadów, czy rząd będzie działał właściwie?\n – Kim Jae-gyu, zabójstwo prezydenta Korei Południowej Park Chung-hee. -"
+ LOADING_TIP_264: "How can you govern the country with insects like this as part of your government?\n - Kim Jae-gyu, the assassination of South Korean President Park Chung-hee. -"
  LOADING_TIP_265: "Nie ma czasu na wahanie, musimy mocno uderzyć!\n – Chun Doo-hwan, instrukcje dotyczące stłumienia incydentu związanego z demokracją w Gwangju. -"
