--- a/localisation/english/MD_focus_LBA_l_english.yml
+++ b/localisation/english/MD_focus_LBA_l_english.yml
@@ -451,6 +451,11 @@
  LBA_emancipator_of_women_desc: "Muammar Gaddafi's latest lecture on Islam to a group of women in Italy has led to a mass conversion of women to Islam and migration to Libya."
  LBA_oppressor_of_women: "Oppressor Of Women"
  LBA_oppressor_of_women_desc: "Muammar Gaddafi's latest lecture on Islam to a group of women in Italy has led to people seeing the great leader as nothing but an oppressor of women. People are leaving Libya in droves as they do not want to live in a country ruled by such a man."
+ aozou_strip_occupation_decisions: "Aouzou Strip Occupation"
+ aozou_strip_occupation_decisions_desc: "With the Aouzou Strip being a contested region between us and our neighbour, the chaos they are having might enable us to take control of the region."
+ generic_occupy_aouzou_strip: "Occupy The Aozou Strip"
+ generic_occupy_aouzou_strip_desc: "[580.owner.GetNameDef]'s current status makes them unable to effectively extend control over the [580.GetName]. We should send a small contingent of troops to secure the area. It is unlikely that [580.owner.GetName] will resist."
+ generic_occupy_aouzou_strip_tt: "§R[580.owner.GetNameDef] might declare war on us!§!"
 
  #Other
  LBA_revise_green_book_current_reform_value: "Current value of §YReform§!: [?libya_green_book_reform]"
@@ -1635,6 +1640,10 @@
  LibyaFocus.103.t: "[FROM.GetNameDef] Takes Control Of Oil"
  LibyaFocus.103.d: "Using their influence over our country, the [FROM.GetAdjective] has somehow managed to convince our Energy Minister to give resource drilling rights to the Libyan National Oil Corporation. Despite heavy objections by other politicians, the minister and Chadian owners of the oil fields were more than happy to give control of the fields. Armed men bearing Libyan uniforms quickly replaced the local Chadian guard units at the oil fields, and it seems they are here to stay."
  LibyaFocus.103.a: "I can't believe they've done this"
+ LibyaFocus.104.t: "[FROM.GetNameDef] Occupies The [580.GetName]"
+ LibyaFocus.104.d: "With our security forces occupied elsewhere, the deserts of the [580.GetName] are basically unpatrolled. Taking advantage of this power vacuum, [FROM.GetNameDef] has sent a small contingent of troops to set up a small base in the town of Aozou. With the [FROM.GetAdjective] flying in the center of Aouzou town, [FROM.GetNameDef] has claimed the entire area for themselves."
+ LibyaFocus.104.a: "There is nothing we can do"
+ LibyaFocus.104.b: "They will pay for this!"
 
  #Random Events
  LibyaRandomEvents.1.t: "Cabinet Shuffle"
