Fixed an Italian bug

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -98,6 +98,7 @@ Achievements:
   - Fixed the missing parent class for the Futuristic Integrated Missile Radar Control for MTG ships
   - Fixed that Chinese Focus "End US Hegemony" requirements cannot be properly met
   - Fixed that Chinese Focus "Support Negotiations" Requirements cannot be properly met after Taliban's defeat
+  - Fixed the ability to have undercover agents go negative in the mafia system
 
  Content:
   - NEW TREES: Libya, Tibesti, African Union (Shared)
