--- a/localisation/english/MD_focus_ARM_l_english.yml
+++ b/localisation/english/MD_focus_ARM_l_english.yml
@@ -1674,7 +1674,7 @@
  ARM_transcaucasian_sweizland_idea_2: "\"Transcaucasian Switzerland\""
  ARM_transcaucasian_sweizland_idea_2_desc: "Armenia has gone through a difficult path of war, ruin and loss of land. If we do not want a repetition of our history, we need to learn to build a stable unshakable state, which is Switzerland - a European island of prosperity and peace."
  ARM_trade_cooperation_idea: "Bet on Cooperation"
- ARM_trade_isolationism_idea: "Isolationaism"
+ ARM_trade_isolationism_idea: "isolationism"
  ARM_trade_isolationism_idea_desc: "We are not worried about problems outside Armenia. We will develop our own country on our own. Of course, this does not mean that we will close ourselves off from everyone, but the vector of our policy should be directed only towards the interior of the country."
  ARM_armenian_defence_1: "Army Reformation"
  ARM_armenian_defence_3: "People's army"
