--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -1019,7 +1019,7 @@
  korea.5.d: "The primary demand of the North is that we cease our joint military exercises with the United States, exercises that they see as preparations for an invasion of their territory. However, these exercises are widely viewed by our military as necessary preparations in case of a North Korean attack. Agreeing to stop these exercises would therefore be a significant gamble, one where our country's security is put on the line."
  korea.5.d_NKO: "The primary demand of the South is that we cease our nuclear weapons tests, tests that they see as evidence of our aggressive intentions. However, our nuclear weapons program is viewed by the military as an important deterrent against US invasion. Moreover, the program and the tests that are necessary for its continuation help bolster the legitimacy of our government. Agreeing to stop these tests would therefore be a significant gamble, one where both our country and our government's security is put on the line."
  korea.5.a: "Our country will never be whole again unless we take a few risks..."
- korea.5.b: "Some risks are too big too take."
+ korea.5.b: "Some risks are too big to take."
 
  korea.6.t: "Korean Peace Talks Begin"
  korea.6.d: "For over half a century North and South Korea have technically been in a state of war. This frozen conflict has occasionally heated up with clashes between the two sides along disputed maritime boundaries or across the DMZ. Now the two sides are coming together in the hope of bringing about an end to this state of affairs and achieve de-escalation on the Korean peninsula through a formal peace treaty. Negotiating a peace treaty is widely seen as an important first step towards reunifying the Korean peninsula."
