--- a/localisation/english/MD_focus_CES_l_english.yml
+++ b/localisation/english/MD_focus_CES_l_english.yml
@@ -26,23 +26,23 @@
  #
  uzbek_karap_tt_effect: "§RIt will change their opinion of us§!"
  UZB_karakalpakstan_category: "Karakalpakstan Question"
- UZB_karakalpakstan_category_desc: "Karakalpakstan separatism in Uzbekistan refers to a historical and ongoing regional movement centered around the desire for greater autonomy or even independence for the autonomous republic of Karakalpakstan within the boundaries of Uzbekistan. Karakalpakstan, located in the northwestern part of Uzbekistan, is predominantly inhabited by the Karakalpak people, who have distinct cultural, linguistic, and historical ties to the region.\n\nkarakalpakstans Opinion: §Y[?UZB_karakalpakstans_opinion]§!\n\nUzbeks Opinion: §Y[?UZB_uzbeks_opinion]§!\n"
+ UZB_karakalpakstan_category_desc: "Karakalpakstan separatism in Uzbekistan refers to a historical and ongoing regional movement centered around the desire for greater autonomy or even independence for the autonomous republic of Karakalpakstan within the boundaries of Uzbekistan. Karakalpakstan, located in the northwestern part of Uzbekistan, is predominantly inhabited by the Karakalpak people, who have distinct cultural, linguistic, and historical ties to the region.\n\nKarakalpakstans Opinion: §Y[?UZB_karakalpakstans_opinion]§!\n\nUzbeks Opinion: §Y[?UZB_uzbeks_opinion]§!\n"
  UZB_Promote_Uzbekistan_unity: "Promote Uzbekistan unity"
  UZB_Promote_Karakalpakstan_identity: "Promote Karakalpakstan identity"
  #
- UZB_karakalpakstan.1.t: "Religious conflict between Karalpaks and Uzbeks"
- UZB_karakalpakstan.1.d: "This morning there was a clash between Uzbeks and Karalpaks at the local mosque. At first it was just a verbal altercation, but then it abruptly turned into a bloodbath. Both sides believe that a religion alien to them is present on their land. Whose side are we on?"
- UZB_karakalpakstan.1.a: "Back the Karalpaks"
+ UZB_karakalpakstan.1.t: "Religious conflict between Karakalpaks and Uzbeks"
+ UZB_karakalpakstan.1.d: "This morning there was a clash between Uzbeks and Karakalpaks at the local mosque. At first it was just a verbal altercation, but then it abruptly turned into a bloodbath. Both sides believe that a religion alien to them is present on their land. Whose side are we on?"
+ UZB_karakalpakstan.1.a: "Back the Karakalpaks"
  UZB_karakalpakstan.1.b: "Back the Uzbeks"
 #
- UZB_karakalpakstan.2.t: "A bar fight between Karalpaks and Uzbeks"
- UZB_karakalpakstan.2.d: "A couple hours ago there was a drunken altercation between Uzbeks and Karalpaks. The conflict occurred due to differences in political views. After a couple of mutual insulting expressions, both sides got into a fierce fight with the use of external objects."
- UZB_karakalpakstan.2.a: "Back the Karalpaks"
+ UZB_karakalpakstan.2.t: "A bar fight between Karakalpaks and Uzbeks"
+ UZB_karakalpakstan.2.d: "A couple hours ago there was a drunken altercation between Uzbeks and Karakalpaks. The conflict occurred due to differences in political views. After a couple of mutual insulting expressions, both sides got into a fierce fight with the use of external objects."
+ UZB_karakalpakstan.2.a: "Back the Karakalpaks"
  UZB_karakalpakstan.2.b: "Back the Uzbeks"
 #
  UZB_karakalpakstan.3.t: "A fight on the soccer field between local teams"
  UZB_karakalpakstan.3.d: "A couple of hours ago there was a conflict between members of the Uzbek soccer team. The main reason is ethnic disagreement. As it became known, one of the participants called the other a very offensive expression, which led to unrest on the soccer field."
- UZB_karakalpakstan.3.a: "Back the Karalpaks"
+ UZB_karakalpakstan.3.a: "Back the Karakalpaks"
  UZB_karakalpakstan.3.b: "Back the Uzbeks"
 #
  UZB_karakalpakstan.4.t: "Clashes During the Karakalpakstan Festival"
