--- a/localisation/languages.yml
+++ b/localisation/languages.yml
@@ -44,6 +44,24 @@ l_braz_por:
  l_russian:0 "Russo"
  l_spanish:0 "Spagnolo"
  l_braz_por:0 "Italiano"
+l_polish:
+ PDX_DUMMY_LOCALIZATION:0 ""
+ l_english:0 "Angielski"
+ l_braz_por:0 "Portugalski brazylijski"
+ l_french:0 "Francuski"
+ l_german:0 "Niemiecki"
+ l_polish:0 "Polski"
+ l_russian:0 "Rosyjski"
+ l_spanish:0 "Hiszpański"
+l_german:
+ PDX_DUMMY_LOCALIZATION:0 ""
+ l_english:0 "Englisch"
+ l_braz_por:0 "Brasilianisches Portugiesisch"
+ l_french:0 "Französisch"
+ l_german:0 "Deutsch"
+ l_polish:0 "Politur"
+ l_russian:0 "Russisch"
+ l_spanish:0 "Spanisch"
 l_japanese:
  PDX_DUMMY_LOCALIZATION:0 ""
 l_simp_chinese:
