US ground OOB fully done

--- a/localisation/polish/equipment_l_polish.yml
+++ b/localisation/polish/equipment_l_polish.yml
@@ -4263,7 +4263,7 @@
  USA_artillery_3: "M585"
  USA_artillery_4: "M667"
  USA_util_vehicle_0: "Jeepa M151"
- USA_util_vehicle_1: "M561 Koza Gama"
+ USA_util_vehicle_1: "M35 2½-ton"
  USA_util_vehicle_2: "Humvee"
  USA_util_vehicle_3: "M1113 Humvee ECV"
  USA_util_vehicle_5: "M-ATV"
