--- a/localisation/russian/equipment_l_russian.yml
+++ b/localisation/russian/equipment_l_russian.yml
@@ -5120,7 +5120,7 @@
  USA_artillery_4: "M667" #Fictional
 
  USA_util_vehicle_0: "M151 Jeep"
- USA_util_vehicle_1: "M561 Gama Goat"
+ USA_util_vehicle_1: "M35 2½-ton"
  USA_util_vehicle_2: "Humvee"
  USA_util_vehicle_3: "M1113 Humvee ECV"
  USA_util_vehicle_5: "M-ATV"
